[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main Menu.gd" type="Script" id=1]
[ext_resource path="res://packing and conveying/Helvetica 700_WhatsApp.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 2 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -731.0
margin_top = -300.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -206.0
margin_top = 120.0
margin_right = 206.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
text = "SELECT A SIMULATION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Packing and conveying" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = -66.0
margin_right = 306.5
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "Packing and Conveying"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deck of cards" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = 30.0
margin_right = 310.5
margin_bottom = 110.0
custom_fonts/font = SubResource( 2 )
text = "Deck of Cards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="atm queue" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = 126.0
margin_right = 312.5
margin_bottom = 208.0
custom_fonts/font = SubResource( 2 )
text = "ATM Queue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin toss" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = 222.0
margin_right = 312.5
margin_bottom = 304.0
custom_fonts/font = SubResource( 2 )
text = "Coin Toss"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Packing and conveying" to="." method="_on_Packing_and_conveying_pressed"]
[connection signal="pressed" from="Control/deck of cards" to="." method="_on_deck_of_cards_pressed"]
[connection signal="pressed" from="Control/atm queue" to="." method="_on_atm_queue_pressed"]
[connection signal="pressed" from="Control/coin toss" to="." method="_on_coin_toss_pressed"]
